EDGE-304 application bid API
