# src/placement_controller/api/model.py
@@ -1,4 +1,6 @@
-from typing import List
+from typing import List, Optional
+
+from enum import Enum
 
 from pydantic import BaseModel
 
@@ -17,3 +19,49 @@ class ApplicationModel(BaseModel):
         zones = application.get_placement_zones()
         owner = application.get_owner_zone() or ""
         return ApplicationModel(name=name.name, namespace=name.namespace, zones=zones, owner=owner)
+
+
+class BidCriteria(str, Enum):
+    cpu = "cpu"
+    gpu = "gpu"
+    ram = "ram"
+    ephemeralStorage = "ephemeral-storage"
+    pvcStorage = "pvc-storage"
+
+
+class Metric(str, Enum):
+    cost = "cost"
+    energy = "energy"
+
+
+class BidRequestModel(BaseModel):
+    id: str
+    spec: str
+    bidCriteria: List[BidCriteria]
+    metrics: List[Metric]
+
+
+class BidStatus(str, Enum):
+    accepted = "accepted"
+    rejected = "rejected"
+
+
+class MetricUnit(str, Enum):
+    core = "core"
+    byte = "byte"
+    watt = "watt"
+    eur = "eur"
+
+
+class MetricValue(BaseModel):
+    id: Metric
+    value: str
+    unit: MetricUnit
+
+
+class BidResponseModel(BaseModel):
+    id: str
+    status: BidStatus
+    reason: Optional[str]
+    msg: Optional[str]
+    metrics: List[MetricValue]
